Fixed site title in Gutenberg being wrong width

--- a/assets/styles/structure/blog-posts.scss
+++ b/assets/styles/structure/blog-posts.scss
@@ -1,5 +1,5 @@
 // Classic block (pre-gutenberg)
-body.wp-admin.post-type-post .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper,
+body.wp-admin.post-type-post .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper h1,
 body.wp-admin.post-type-post .editor-styles-wrapper .is-root-container,
 .single-post .post-content {
 	max-width: 840px;
