--- a/style.css
+++ b/style.css
@@ -2455,7 +2455,7 @@ a:hover {
     font-size: 12px;
   }
 }
-body.wp-admin.post-type-post .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper,
+body.wp-admin.post-type-post .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper h1,
 body.wp-admin.post-type-post .editor-styles-wrapper .is-root-container,
 .single-post .post-content {
   max-width: 840px;
